--- a/templates/credit.html
+++ b/templates/credit.html
@@ -6,6 +6,6 @@
     <title>Credit</title>
 </head>
 <body>
-    <p>FICO Score: {{credit}}</p>
+    <p id="credit">FICO Score: {{credit}}</p>
 </body>
 </html>
