--- a/templates/budget.html
+++ b/templates/budget.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget</title>
 </head>
-<body>
-    <p id="budget">Your current balance is: {{budget}}</p>
+<body id="budget">
+    <p>Your current balance is: {{budget}}</p>
 </body>
 </html>
