--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,40 @@
 /* . is for classes and # is for html ids */
 
+body {
+    background-color: rgb(187, 187, 5);
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
+
+.block {
+    display: block;
+    padding: 8px;
+    background-color: black;
+}
+
 #budget {
 font-size: 200px;
 background-color: gold;
