--- a/templates/budget.html
+++ b/templates/budget.html
@@ -7,6 +7,6 @@
     <title>Budget</title>
 </head>
 <body id="budget">
-    <p>Your current balance is: {{budget}}</p>
+    <p id="current">Your current balance is: {{budget}}</p>
 </body>
 </html>
