--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../static/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BudgetBuddy</title>
-    <link href="static/style.css" rel="stylesheet"/>
 </head>
 <body>
+  <div class="navbar">
     <nav>
-      <ul>
-        <a href="budget/budget.html"><li>Budget</li></a>
-        <a href="spending/spending.html"><li>Manage Spending</li></a>
-        <a href="credit/credit.html"><li>Credit Score</li></a>
-        <a href="saving/saving.html"><li>Saving Goals</li></a>
+      <ul class="block">
+        <a href="budget.html"><li>Budget</li></a>
+        <a href="spending.html"><li>Manage Spending</li></a>
+        <a href="credit.html"><li>Credit Score</li></a>
+        <a href="saving.html"><li>Saving Goals</li></a>
+        <a href="signin.html"><li>Login</li></a>
       </ul>
     </nav>
+    </div>
   <script scr=""></script>
 </body>
 </html>
