--- a/templates/budget.html
+++ b/templates/budget.html
@@ -13,7 +13,7 @@
     <h1>Your Current Balance</h1>
     <ul>
         {% for person in people %}
-            <li>{{ person['username'] }}: {{ person['budget'] }}</li>  <!-- Adjust column names -->
+            <li>{{ person['username'] }}: {{ person['budget'] }}</li>  
         {% endfor %}
     </ul>
         
