--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,7 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    transition : background-color 0.3s;
   }
   
   /* Change the link color to #111 (black) on hover */
@@ -33,6 +34,7 @@ ul {
     display: block;
     padding: 8px;
     background-color: rgb(85, 255, 0);
+    margin: 10px;
 }
 
 #budget {
