--- a/templates/budget.html
+++ b/templates/budget.html
@@ -7,6 +7,7 @@
     <title>Budget</title>
 </head>
 <body id="budget">
+    <img src="../static/imgs/budget.png" >
     {% for person in people %}
     <h1>Welcome, {{ person['username'] }}</h1>
     {% endfor %}
