--- a/templates/credit.html
+++ b/templates/credit.html
@@ -6,6 +6,7 @@
     <title>Credit</title>
 </head>
 <body>
+    <img src="../static/imgs/creditscore.png" id="credit">
     <p id="credit">FICO Score: {{credit}}</p>
 </body>
 </html>
