--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <title>BudgetBuddy</title>
 </head>
 <body>
+  <img src="../static/imgs/welcome.png" id="welcome" width="800" height="600">
   <div class="navbar">
     <nav>
       <ul class="block">
