--- a/templates/savings.html
+++ b/templates/savings.html
@@ -6,6 +6,7 @@
     <title>Savings</title>
 </head>
 <body>
+    <img src="../static/imgs/savings.png" id="saving" width="800" height="600">
     <p>Savings Balance: {{savings}}</p>
 </body>
 </html>
