--- a/templates/signin.html
+++ b/templates/signin.html
@@ -7,12 +7,13 @@
     <title>Sign In</title>
 </head>
 <body>
-<form action="" method="post">
+ <img src="../static/imgs/signin.png" id="signin" width="800" height="1000">
+ <form action="" method="post">
     <label id="user">User</label>
     <input type="text" id="user" name="user"><br>
     <label id="password">Password</label>
     <input type="text" id="password" name="password"><br>
     <input type="submit" value="Login">
-    </form> 
+ </form> 
 </body>
 </html>
