--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,14 @@
     <title>BudgetBuddy</title>
 </head>
 <body>
+  <h1>WELCOME TO BudgetBuddy!</h1>
   <img src="../static/imgs/welcome.png" id="welcome" width="800" height="600">
-  <div class="navbar">
-    <nav>
-      <ul class="block">
-        <a href="budget.html"><li>Budget</li></a>
-        <a href="spending.html"><li>Manage Spending</li></a>
-        <a href="credit.html"><li>Credit Score</li></a>
-        <a href="saving.html"><li>Saving Goals</li></a>
-        <a href="signin.html"><li>Login</li></a>
-      </ul>
-    </nav>
-    </div>
-  <script scr=""></script>
+  <nav>
+    <ul class="nav-list">
+      <li><a href="login">Log-in</a></li>
+      <li><a href="register">Register</a></li>
+    </ul>
+  </nav>
+
 </body>
 </html>
