--- a/templates/credit.html
+++ b/templates/credit.html
@@ -7,12 +7,15 @@
 </head>
 <body>
 
-    <img src="../static/imgs/creditscore.png" id="credit">
-    <p id="credit">FICO Score: {{credit}}</p>
+    <form   action="{{ url_for('logout') }}" method="POST">
+        <input type="submit" value="logout">
+        </form>
 
-    {% for person in people %}
-    <p id="credit">FICO Score: {{ person['credit'] }}</p>
-    {% endfor %}
+    <img src="../static/imgs/creditscore.png" id="credit">
+
+   
+    <p id="credit">FICO Score: {{ user['credit'] }}</p>
+    
 
 </body>
 </html>
