--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../static/style.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Your custom CSS file -->
+    <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BudgetBuddy</title>
 </head>
-<body>
-  <h1>WELCOME TO BudgetBuddy!</h1>
-  <img src="../static/imgs/welcome.png" id="welcome" width="800" height="600">
-  <nav>
-    <ul class="nav-list">
-      <li><a href="login">Log-in</a></li>
-      <li><a href="register">Register</a></li>
-    </ul>
-  </nav>
+<body class="bg-light"> <!-- Changed bg-dark to bg-light for light background -->
+  <!-- Container for the content -->
+  <div class="container">
+    <!-- Card for centering content -->
+    <div class="card p-4 mx-auto">
+      <h1 class="mt-3 mb-3 text-center">WELCOME TO BudgetBuddy!</h1>
 
+      <!-- Navigation -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="login">Log-in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="register">Register</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
